<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Menu "My Location" -->
    <item android:id="@+id/menu_map_location"
        app:showAsAction="always" android:orderInCategory="1"
        android:title="@string/menu_map_location"
        android:icon="@android:drawable/ic_menu_mylocation"
        tools:ignore="AppCompatResource" />

    <!-- Menu "Map Type" -->
    <item android:id="@+id/menu_map_mode"
        app:showAsAction="always" android:orderInCategory="2"
        android:title="@string/menu_map_mode"
        android:icon="@android:drawable/ic_menu_mapmode"
        tools:ignore="AppCompatResource">
        <menu>

            <item android:id="@+id/menu_map_mode_normal"
                app:showAsAction="never" android:orderInCategory="1"
                android:title="@string/menu_map_mode_normal"
                tools:ignore="AppCompatResource" />

            <item android:id="@+id/menu_map_mode_satellite"
                app:showAsAction="never" android:orderInCategory="2"
                android:title="@string/menu_map_mode_satellite"
                tools:ignore="AppCompatResource" />

            <item android:id="@+id/menu_map_mode_terrain"
                app:showAsAction="never" android:orderInCategory="2"
                android:title="@string/menu_map_mode_terrain"
                tools:ignore="AppCompatResource" />

        </menu>
    </item>

    <!-- Menu "Delete markers" -->
    <item android:id="@+id/menu_delete_markers"
        app:showAsAction="always" android:orderInCategory="3"
        android:title="@string/menu_delete_markers"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        tools:ignore="AppCompatResource" />

</menu>